
test('trivial', find_program('trivial.sh'), args: [exe.full_path()])
test('basic', find_program('basic.sh'), args: [exe.full_path()])
test('interleaved', find_program('interleaved.sh'), args: [exe.full_path()])
test('separator and chopped data', find_program('separator-chopped-data.sh'), args: [exe.full_path()])
test('Long line test', find_program('long-line-test.sh'), args: [exe.full_path()])

